# OllamaArtist

./: .gitignore  ComfyUIController.py  CreateArt.py  ImageOrder.py  ModelEnum.py  OllamaArtist.py  README.md  api.py  main.py  package-lock.json  pyproject.toml
.github/workflows/: testing.yml
ComfyUIWorkflow/: Default.json  ImageOrderWF.json
Test/: test_OllamaArtist_without_model.py
src/: BackgroundRemove.py  ComfyUIController.py  CreateArt.py  OllamaArtist.py  main.py
tests/: test_OllamaArtist_without_model.py
wwwroot/: README.md  index.html  package-lock.json  package.json  vite.config.js
wwwroot/src/: App.vue
wwwroot/src/components/: GenerateButton.vue
wwwroot/vue-ollama-artist/: README.md  package-lock.json  package.json
wwwroot/vue-ollama-artist/src/: App.vue
wwwroot/vue-ollama-artist/src/components/: GenerateButton.vue  HostGetter.js  ImageOrder.js  PingButton.vue
